Added webpack config

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <body>
-      <p> Welcome to our react calculator! </p>
+      <div id="app"/>
     </body>
+    <script src ="./bundle.js"></script>
   </head>
 </html>
